# icicle-python

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  MANIFEST.in  README.md  build.rs  copy-ghidra.py  exception_data_design.md  icicle.pyi  pyproject.toml  requirements.txt  setup.cfg  setup.py
.cargo/: config.toml
.github/workflows/: CI.yml
python/icicle/: __init__.py  icicle.pyi
python/icicle/Ghidra/Processors/6502/data/languages/: 6502.cspec  6502.ldefs  6502.pspec  6502.slaspec  65c02.slaspec
python/icicle/Ghidra/Processors/68000/data/languages/: 68000.cspec  68000.dwarf  68000.ldefs  68000.opinion  68000.pspec  68000.sinc  68000_register.cspec  68020.slaspec  68030.slaspec  68040.slaspec  coldfire.slaspec
python/icicle/Ghidra/Processors/8048/data/languages/: 8048.cspec  8048.ldefs  8048.pspec  8048.slaspec
python/icicle/Ghidra/Processors/8051/data/languages/: 80251.cspec  80251.pspec  80251.sinc  80251.slaspec  80390.cspec  80390.slaspec  8051.cspec  8051.ldefs  8051.pspec  8051.slaspec  8051_archimedes.cspec  8051_main.sinc  mx51.cspec  mx51.pspec  mx51.sinc  mx51.slaspec
python/icicle/Ghidra/Processors/8085/data/languages/: 8085.cspec  8085.ldefs  8085.pspec  8085.slaspec
python/icicle/Ghidra/Processors/AARCH64/data/languages/: AARCH64.cspec  AARCH64.dwarf  AARCH64.ldefs  AARCH64.opinion  AARCH64.pspec  AARCH64.slaspec  AARCH64BE.slaspec  AARCH64_AMXext.sinc  AARCH64_AppleSilicon.slaspec  AARCH64_base_PACoptions.sinc  AARCH64_ilp32.cspec  AARCH64_win.cspec  AARCH64base.sinc  AARCH64instructions.sinc  AARCH64ldst.sinc  AARCH64neon.sinc  AARCH64sve.sinc  AppleSilicon.ldefs
python/icicle/Ghidra/Processors/ARM/data/languages/: ARM.cspec  ARM.dwarf  ARM.gdis  ARM.ldefs  ARM.opinion  ARM.sinc  ARM4_be.slaspec  ARM4_le.slaspec  ARM4t_be.slaspec  ARM4t_le.slaspec  ARM5_be.slaspec  ARM5_le.slaspec  ARM5t_be.slaspec  ARM5t_le.slaspec  ARM6_be.slaspec  ARM6_le.slaspec  ARM7_be.slaspec  ARM7_le.slaspec  ARM8_be.slaspec  ARM8_le.slaspec  ARMCortex.pspec  ARMTHUMBinstructions.sinc  ARM_v45.cspec  ARM_v45.pspec  ARM_win.cspec  ARMinstructions.sinc  ARMneon.dwarf  ARMneon.sinc  ARMt.pspec  ARMtTHUMB.pspec  ARMt_v45.pspec  ARMt_v6.pspec  ARMv8.sinc
python/icicle/Ghidra/Processors/Atmel/data/languages/: atmega256.pspec  avr32.opinion  avr32a.cspec  avr32a.ldefs  avr32a.pspec  avr32a.slaspec  avr32a_arithmetic_operations.sinc  avr32a_autogen.sinc  avr32a_bit_operations.sinc  avr32a_coprocessor_interface.sinc  avr32a_data_transfer.sinc  avr32a_dsp_operations.sinc  avr32a_dsp_operations2.sinc  avr32a_instruction_flow.sinc  avr32a_logic_operations.sinc  avr32a_multiplication_operations.sinc  avr32a_shift_operations.sinc  avr32a_simd_operations.sinc  avr32a_system_control.sinc  avr8.ldefs  avr8.opinion  avr8.pspec  avr8.sinc  avr8.slaspec  avr8e.slaspec  avr8egcc.cspec  avr8eind.slaspec  avr8gcc.cspec  avr8iarV1.cspec  avr8imgCraftV8.cspec  avr8xmega.pspec  avr8xmega.slaspec
python/icicle/Ghidra/Processors/BPF/data/languages/: BPF.cspec  BPF.ldefs  BPF.pspec  BPF.sinc  BPF_le.slaspec
python/icicle/Ghidra/Processors/CP1600/data/languages/: CP1600.cspec  CP1600.ldefs  CP1600.opinion  CP1600.pspec  CP1600.slaspec
python/icicle/Ghidra/Processors/CR16/data/languages/: CR16.cspec  CR16.ldefs  CR16.opinion  CR16.pspec  CR16B.sinc  CR16B.slaspec  CR16C.sinc  CR16C.slaspec
python/icicle/Ghidra/Processors/DATA/data/languages/: data-be-64.slaspec  data-le-64.slaspec  data-ptr16.cspec  data-ptr32.cspec  data-ptr64.cspec  data.ldefs  data.pspec  data.sinc
python/icicle/Ghidra/Processors/Dalvik/data/languages/: Dalvik.ldefs  Dalvik.opinion  Dalvik_Base.cspec  Dalvik_Base.pspec  Dalvik_Base.sinc  Dalvik_Base.slaspec  Dalvik_DEX_Android10.slaspec  Dalvik_DEX_Android11.slaspec  Dalvik_DEX_Android12.slaspec  Dalvik_DEX_KitKat.slaspec  Dalvik_DEX_Lollipop.slaspec  Dalvik_DEX_Marshmallow.slaspec  Dalvik_DEX_Nougat.slaspec  Dalvik_DEX_Oreo.slaspec  Dalvik_DEX_Pie.slaspec  Dalvik_ODEX_KitKat.slaspec  Dalvik_OpCode_3E_43_unused.sinc  Dalvik_OpCode_73_return_void_barrier.sinc  Dalvik_OpCode_73_return_void_no_barrier.sinc  Dalvik_OpCode_73_unused.sinc  Dalvik_OpCode_79_unused.sinc  Dalvik_OpCode_7A_unused.sinc  Dalvik_OpCode_E3_EA_dex.sinc  Dalvik_OpCode_E3_EA_unused.sinc  Dalvik_OpCode_EB_F2_iput_iget.sinc  Dalvik_OpCode_EB_F2_unused.sinc  Dalvik_OpCode_F3_unused.sinc  Dalvik_OpCode_F4_unused.sinc  Dalvik_OpCode_F5_unused.sinc  Dalvik_OpCode_F6_unused.sinc  Dalvik_OpCode_F7_unused.sinc  (+10 more)
src/: lib.rs  main.rs  rawenv.rs
tests/: Cargo.toml  blockopt.py  conftest.py  example.py  exception_data.py  hlt.py  invalid.py  issue32.py  requirements.txt  tests.rs
tests/.cargo/: config.toml
(+409 files in other folders)
