[workspace]
members = ["tests"]
exclude = ["icicle-emu"]

[package]
name = "icicle-python"
edition = "2021"

[lib]
name = "icicle"
crate-type = ["cdylib", "lib"]

[workspace.dependencies]
pyo3 = { version = "0.23.3", features = ["indexmap", "abi3-py37"] }

[dependencies]
pyo3 = { workspace = true }
icicle-cpu = { path = "icicle-emu/icicle-cpu" }
icicle-vm = { path = "icicle-emu/icicle-vm" }
pcode = { path = "icicle-emu/sleigh/pcode" }
sleigh-runtime = { path = "icicle-emu/sleigh/sleigh-runtime" }
indexmap = "*"
target-lexicon = "*"
tracing = "*"
tracing-subscriber = "*"

[build-dependencies]
pyo3-build-config = "0.23.3"

# Reference: https://github.com/PyO3/pyo3/issues/340
[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
