[metadata]
name = icicle-emu
version = 0.0.1
url = https://github.com/icicle-emu/icicle-python
project_urls =
    Bug Tracker = https://github.com/icicle-emu/icicle-python/issues
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: Boost Software License 1.0 (BSL-1.0)
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 5 - Production/Stable
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows

[options]
packages = icicle
package_dir =
    = python
zip_safe = False
setup_requires = setuptools-rust >= 0.12.1;
python_requires = >=3.7

# Reference: https://stackoverflow.com/a/64789489/1806760
[options.package_data]
icicle = Ghidra/**/*